update refresh route
